@@ -1,3 +1,7 @@
+2014-03-27  Carl Hetherington  <cth@carlh.net>
+
+	* Auto-save film metadata before starting DCP encode. 
+
 2014-03-25  Carl Hetherington  <cth@carlh.net>
 
 	* Add support for downloading Doremi server certificates.
@@ -15,7 +19,7 @@
 	* Version 1.66.6 released.
 
 2014-03-23  Carl Hetherington  <cth@carlh.net>
-
+	
 	* Attempt to fix format string specifier error on Windows.
 
 	* Version 1.66.5 released.
